# MFiX-Trilinos

./: Dockerfile_dmp_mfix  Dockerfile_mfix  Dockerfile_mpich  Jenkinsfile  README.md  build.sh
WRAPPERS/: CWrapper_epetra_amesos.cpp  CWrapper_epetra_ifpack.cpp  CWrapper_epetra_ifpack_schwar.cpp  CWrapper_epetra_ml.cpp  CWrapper_epetra_ml_gmres.cpp  CWrapper_tpetra.cpp  CWrapper_tpetra_amesos2.cpp  CWrapper_tpetra_ifpack2.cpp  CWrapper_tpetra_muelu.cpp  CWrapper_tpetra_muelu_left.cpp  CWrapper_tpetra_muelu_mod_cwrap.cpp  MFIXinterface.f  leq_bicgs.f  solve_ifpack2.cpp  solve_lin_eq.f  solve_pp_g.f
market/: solve_ifpack.cpp  url
septa_tpetra/: CWrapper_tpetra.cpp  CWrapper_tpetra_gprof.cpp  compile.sh  compile_gprof.sh  compile_tau.sh  proc2.txt
septa_tpetra/10M/: CWrapper_tpetra.cpp  CWrapper_tpetra_gprof.cpp  test.xml
septa_tpetra/10M/proc64/: analysis_call.txt  gprof.sh  output.txt  proc64.txt  profile.txt  profile_anotated.txt  profile_line.txt
septa_tpetra/precond_ifpack2/: input.txt  mpi30_openmp4_output134875.txt  mpi60_openmp2_output134875.txt  proc16.txt  solve_ifpack.cpp  solve_ifpack1.cpp
septa_tpetra/precond_ifpack2/modified_src/: make_exe_works_mkl.sh  solve_ifpack.cpp
septa_tpetra/precond_ifpack2/modified_src_matrixmarket/: output195428.txt
septa_tpetra/precond_ifpack2/modified_src_matrixmarket/market/: jobscript.sh
septa_tpetra/precond_ifpack2/modified_src_matrixmarket/outputs/: output181311.txt  output181341.txt  output181347.txt  output181359.txt  output181368.txt  output181697.txt  output181726_gmres.txt  output181895.txt  output195320.txt  output195340.txt  output195354.txt  output195356.txt  output195415.txt
septa_tpetra/proc32/: output.txt  proc32.txt  profile.txt  profile_anotated.txt  profile_line.txt
septa_tpetra/proc64/: output.txt  proc64.txt
septa_tpetra/test_matrix/: debug_sim1b3  leq_sor.m  question6.m  question7.m  question8.m
septa_tpetra/test_matrix/matlab/: b.txt  x.txt  x_bicg.txt  x_bicgstab.txt  xmatlab.txt
src/: input_param.xml  make_exe.sh  test.xml
tests/2d/: .txt.swp  Bug_Fixes  CWrapper_aztec_map.cpp  CWrapper_aztec_map1bak.cpp  CWrapper_aztec_map2bak.cpp  Makefile  config.status  make_exe.sh
tests/2d/WRAPPERS/: FWrapper_ext.f  MFIXinterface1_bak.f  MFIXinterface2.f  MFIXinterface20.f  MFIXinterface2_bak.f  MFIXinterface2_new.f  MFIXinterface2_work.f  MFIXinterface3.f  MFIXinterface31_bak.f  MFIXinterface3_bak.f  input_param.xml  make_exe.sh
tests/2d/copy/: CWrapper_tpetra.cpp  MFIXinterface4_bak.f  solve_lin_eq.f  solve_line.f
tests/2d/tut/Liquidbed/: run_jobs
tests/2d/tut/fluidBed1_refine/: 2d_fluidbed_mpi.fig  2d_fluidbed_mpim.eps  2d_fluidbed_mpim.fig  2d_fluidbed_mpim.fig.bak  2d_fluidbed_mpip72.eps  2d_fluidbed_mpip72.fig  2d_fluidbed_mpip72.fig.bak
tests/3d/: CWrapper.cpp  CWrapper_amesos.cpp  CWrapper_amesos1.cpp  CWrapper_aztec.cpp  CWrapper_aztec_map1.cpp  CWrapper_aztec_map1bak.cpp  CWrapper_aztec_map2.cpp  CWrapper_epetra_ifpack_flops.cpp  CWrapper_epetra_ml_flops.cpp  CWrapper_map2.cpp  CWrapper_tpetra.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  make_exe.sh  make_exe1.sh  make_exe_test.sh  missing
tests/3d/WRAPPERS/: CWrapper_tpetra_muelu.cpp  FWrapper_ext.f  MFIXinterface.f  MFIXinterface4_bak.f  MFIXinterface6_nodek.f  leq_bicgs.f  make_exe.sh  solve_lin_eq.f
tests/3d/tut/biomass/: CWrapper_tpetra.cpp  Makefile  cmake_install.cmake  (+2 more)
tests/3d/tut/biomass/WRAPPERS/: CWrapper_amesos2.cpp  CWrapper_map1.cpp  CWrapper_map4.cpp  CWrapper_tpetra.cpp  FWrapper_ext.f  MFIXinterface2.f  MFIXinterface2_work.f  MFIXinterface5_bak.f  MFIXinterface6.f  Makefile  configure.ac  configure_mfix  init_namelist.f  make_exe.sh  scriptm_new
(+1779 files in other folders)
